[tool.poetry]
name = "grad project profile"
version = "0.1.0"
description = ""
authors = ["Abdullah <56775516+Zaazou@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
